fix ‘up next’ button on mobile

--- a/src/css/work.css
+++ b/src/css/work.css
@@ -58,17 +58,24 @@
     padding: 82px 0 102px 0;
     margin-top: 0;
     margin-bottom: 0;
-    background-image: url(/img/global/bg-tile.jpg);
     background-color: rgba(188,160,112, 1);
-    background-blend-mode: multiply;
     transition: background-color .2s ease;
 
-    &:hover {
-      background-color: rgba(188,160,112, 0);
+    @media (max-width: 767px) {
+      mix-blend-mode: multiply;
+    }
 
-      h2,
-      h3 {
-        color: $grey;
+    @media (min-width: 768px) {
+      background-image: url(/img/global/bg-tile.jpg);
+      background-blend-mode: multiply;
+
+      &:hover {
+        background-color: rgba(188,160,112, 0);
+
+        h2,
+        h3 {
+          color: $grey;
+        }
       }
     }
 
